# obs-complete-assistant

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  README_EN.md  SECURITY.md  install.bat  install.py  install.sh  obs_assistant.py  publish.bat  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
